<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kinematiccognition.MainActivity"
        android:title="@string/app_name">


    <TextView
            android:layout_width="70dp"
            android:layout_height="38dp"
            android:text="@string/sex_radio"
            android:id="@+id/textView3"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="16dp"
            android:textSize="30sp"
    />
    <TextView
            android:text="@string/born"
            android:layout_width="97dp"
            android:layout_height="39dp"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="16dp"
            android:textSize="30sp"
    />
    <TextView
            android:text="@string/hand_radio"
            android:layout_width="228dp"
            android:layout_height="37dp"
            android:id="@+id/textView2"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:textSize="30sp" android:layout_marginEnd="16dp"/>

    <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="583dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:textSize="30sp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/spinnerMonths">
        <RadioButton
                android:text="@string/sex_fem"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Fem"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/sex_mal"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Mas" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/sex_no"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/Sin" android:layout_weight="1"/>
    </RadioGroup>

    <RadioGroup
            android:id="@+id/radioMano"
            android:layout_width="452dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/radioSex" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="32dp">
        <RadioButton
                android:text="@string/hand_left"
                android:textSize="30sp"
                android:layout_width="77dp"
                android:layout_height="wrap_content" android:id="@+id/radioIzquierda" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/hand_right"
                android:textSize="30sp"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/radioDerecha" android:layout_weight="1"/>
    </RadioGroup>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.4"
            android:id="@+id/guideline"/>
    <Spinner
            android:layout_width="126dp"
            android:layout_height="45dp"
            android:id="@+id/spinnerMonths" android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="32dp" android:scaleX="1.5" android:scaleY="1.5"/>
    <NumberPicker
            android:layout_width="142dp"
            android:layout_height="80dp"

            android:id="@+id/yearPicker"
            android:layout_marginStart="50dp" android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinnerMonths" android:scaleX="1.5" android:scaleY="1.5"/>
    <Button
            android:text="@string/start"
            android:layout_width="354dp"
            android:layout_height="98dp"
            android:id="@+id/btnStart" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/radioMano" android:textSize="30sp"/>


</android.support.constraint.ConstraintLayout>